deploy-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deploy
  labels:
    app: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
        - name: nodejs
          image: arunagri03/node-app@sha256:510781196705c4107b86b7664ab76c41148ac48c14f910bc54ccfef0240924d4
          ports:
            - containerPort: 3000
