deploy-files/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
