deploy-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myapp
spec:
  rules:
    - host: "arunm.online"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: myapp-svc
                port:
                  number: 80
